--- a/System_Integrator.html
+++ b/System_Integrator.html
@@ -6,7 +6,7 @@
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-   <link href="images/logo/Elite favicon.png" rel="icon">
+    <link href="images/logo/Elite favicon.png" rel="icon">
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
@@ -31,37 +31,52 @@
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                                <h1>
-                                        <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
-                                            <img src="images/logo/Elite logo .png" alt="">
-                                            
-                                        </a>
-                                    </h1>
+                            <h1>
+                                <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
+                                    <img src="images/logo/Elite logo .png" alt="">
+
+                                </a>
+                            </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
                         <input type="checkbox" id="drop" />
                         <ul class="menu mr-auto">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li>
                                 <label for="drop-2" class="toggle toggle-2">services <span class="fa fa-angle-down"
                                         aria-hidden="true"></span> </label>
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li class="active"><a href="System_Integrator.html" class="drop-text">System Integrator</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Networking & Security</a></li>
-                                    <li><a href="IT_Consultancy.html" class="drop-text">IT Consultancy Services </a></li>
-                                    <li><a href="Contact_Center.html" class="drop-text">Contact Center</a></li>
-                                    <li><a href="Training_Center.html" class="drop-text">Training Center</a></li>
-                                    <li><a href="vue.html" class="drop-text">VUE</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
+                                        </a></li>
+                                    <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
+                                    </li>
+                                    <li><a href="Training_Center.html" class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
-                            <li><a href="projectDetials.html">Projects</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li>
+                                <label for="drop-2" class="toggle toggle-2">Partner <span class="fa fa-angle-down"
+                                        aria-hidden="true"></span> </label>
+                                <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                <input type="checkbox" id="drop-2" />
+                                <ul>
+                                    <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
+                                </ul>
+                            </li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="contact.html">Customer</a></li>
+                            <!-- <li><a href="contact.html">Career</a></li> -->
+                            <li><a href="contact.html">News</a></li>
 
-                            <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
+                            <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                         class="fa fa-facebook-official" aria-hidden="true"></span>
                                     <div class="tooltip">Facebook</div>
                                 </a> </li>
@@ -72,7 +87,7 @@
                             <li class="social-icons"><a href="#" class="p-0 social-icon"><span class="fa fa-instagram"
                                         aria-hidden="true"></span>
                                     <div class="tooltip">Instagram</div>
-                                </a> </li>
+                                </a> </li> -->
                         </ul>
                     </nav>
 
@@ -102,7 +117,9 @@
             <div class="about-hny-info text-left pr-lg-5">
                 <h3 class="tittle-w3ls mb-3">System Integrator</h3>
                 <p class="sub-tittle mt-3 mb-4 pr-lg-5">
-                    As the industry’s premier technology integrator, we are also the leading provider of On Demand Business infrastructures, affording our customers customized technology integration packages to optimize their efficiency.
+                    As the industry’s premier technology integrator, we are also the leading provider of On Demand
+                    Business infrastructures, affording our customers customized technology integration packages to
+                    optimize their efficiency.
                 </p>
             </div>
             <div class="clear"></div>
@@ -110,12 +127,16 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="sub-tittle mt-3 mb-4 pr-lg-5">
-                            From helping customers maximize performance and capability, to keeping IT integration costs down; we consult with our clients to tailor IT solutions and facilitate a smooth transition that optimizes existing IT investments. These services can span the
-                            entire lifespan of the technology; from assessment and strategy & design, to implementation and operational services.
+                            From helping customers maximize performance and capability, to keeping IT integration costs
+                            down; we consult with our clients to tailor IT solutions and facilitate a smooth transition
+                            that optimizes existing IT investments. These services can span the
+                            entire lifespan of the technology; from assessment and strategy & design, to implementation
+                            and operational services.
                         </p>
                         <p>
 
-                            ELITEIT provides complete solutions and services that empower businesses to achieve seamless integration:
+                            ELITEIT provides complete solutions and services that empower businesses to achieve seamless
+                            integration:
 
                             <ul class="ul_for_list">
                                 <li>Cloud Services ( IaaS ,PaaS,SaaS)</li>
@@ -139,9 +160,14 @@
                 </div>
                 <div class="row">
                     <p class="sub-tittle mt-3 mb-4 pr-lg-5">
-                        Operational efficiency and business resiliency address these customers’ needs and become entry points to On Demand business. In times of tight budgets, businesses need to increase the value of their IT investments by optimizing assets and resources, managing
-                        costs and better aligning IT investments with their objectives. Other businesses may be focused on creating a more flexible infrastructure that delivers continuous business and IT operations, adapts quickly to change and protects
-                        operations. ITS can help customers make the improvements necessary to start the On Demand journey.
+                        Operational efficiency and business resiliency address these customers’ needs and become entry
+                        points to On Demand business. In times of tight budgets, businesses need to increase the value
+                        of their IT investments by optimizing assets and resources, managing
+                        costs and better aligning IT investments with their objectives. Other businesses may be focused
+                        on creating a more flexible infrastructure that delivers continuous business and IT operations,
+                        adapts quickly to change and protects
+                        operations. ITS can help customers make the improvements necessary to start the On Demand
+                        journey.
                     </p>
                 </div>
             </div>
@@ -154,9 +180,9 @@
     <!-- footer -->
     <footer class="py-lg-5 py-4">
         <svg viewBox="-450 -450 900 50" class="Section-curve">
-                    <path fill="#fff" d='M-559,-477
-                    C-499,-388 571,-397 620,-501'/>
-                  </svg>
+            <path fill="#fff" d='M-559,-477
+                    C-499,-388 571,-397 620,-501' />
+        </svg>
         <div class="container py-sm-3">
             <div class="row footer-grids">
                 <div class="col-lg-4 mt-4 logo2 ">
@@ -164,7 +190,7 @@
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">
                             <img src="images/logo/Elite favicon.png" alt="">
-                            
+
                         </a>
                     </h2>
 
@@ -200,23 +226,24 @@
                             </li>
                             <li>
                                 <a href="about.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="About us">About us</span>
-                                                </a>
+                                    <span data-hover="About us">About us</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="index.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Services">Services</span>
-                                                </a>
+                                    <span data-hover="Services">Services</span>
+                                </a>
                             </li>
                             <li>
-                                <a href="projectDetials.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                    <span data-hover="Projects">Projects</span>
-                                                    </a>
+                                <a href="projectDetials.html"><span class="fa fa-angle-double-right"
+                                        aria-hidden="true"></span>
+                                    <span data-hover="Projects">Projects</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="contact.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Contact Us">Contact Us</span>
-                                                </a>
+                                    <span data-hover="Contact Us">Contact Us</span>
+                                </a>
                             </li>
 
                         </ul>
@@ -227,8 +254,10 @@
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a></p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a>
+                    </p>
+                    <p><span class="fa fa-envelope"></span><a
+                            href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
                 </div>
 
             </div>
