--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-   <link href="images/logo/Elite favicon.png" rel="icon">
+    <link href="images/logo/Elite favicon.png" rel="icon">
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
@@ -33,12 +33,12 @@
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                                <h1>
-                                        <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
-                                            <img src="images/logo/Elite logo .png" alt="">
-                                            
-                                        </a>
-                                    </h1>
+                            <h1>
+                                <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
+                                    <img src="images/logo/Elite logo .png" alt="">
+
+                                </a>
+                            </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
@@ -52,18 +52,33 @@
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="System_Integrator.html" class="drop-text">System Integrator</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Networking & Security</a></li>
-                                    <li><a href="IT_Consultancy.html" class="drop-text">IT Consultancy Services </a></li>
-                                    <li><a href="Contact_Center.html" class="drop-text">Contact Center</a></li>
-                                    <li><a href="Training_Center.html" class="drop-text">Training Center</a></li>
-                                    <li><a href="vue.html" class="drop-text">VUE</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
+                                        </a></li>
+                                    <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
+                                    </li>
+                                    <li><a href="Training_Center.html" class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
-                            <li><a href="projectDetials.html">Projects</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li>
+                                <label for="drop-2" class="toggle toggle-2">Partner <span class="fa fa-angle-down"
+                                        aria-hidden="true"></span> </label>
+                                <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                <input type="checkbox" id="drop-2" />
+                                <ul>
+                                    <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
+                                </ul>
+                            </li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="contact.html">Customer</a></li>
+                            <!-- <li><a href="contact.html">Career</a></li> -->
+                            <li><a href="contact.html">News</a></li>
 
-                            <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
+                            <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                         class="fa fa-facebook-official" aria-hidden="true"></span>
                                     <div class="tooltip">Facebook</div>
                                 </a> </li>
@@ -74,7 +89,7 @@
                             <li class="social-icons"><a href="#" class="p-0 social-icon"><span class="fa fa-instagram"
                                         aria-hidden="true"></span>
                                     <div class="tooltip">Instagram</div>
-                                </a> </li>
+                                </a> </li> -->
                         </ul>
                     </nav>
 
@@ -103,9 +118,12 @@
     <section class="about py-5">
         <div class="container py-md-5 ">
             <div class="about-hny-info text-left pr-lg-5 ">
-                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"><span class="pink">Who</span> We Are</h3>
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"><span class="pink">Who</span> We Are
+                </h3>
                 <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
-                    Premium Security Electronics is a National Saudi Company, Partners and Authorized Distributors for many of the International Brands in the Field of Communications and Networking, we offer all the technical solutions for Low current Systems through a well-educated,
+                    Premium Security Electronics is a National Saudi Company, Partners and Authorized Distributors for
+                    many of the International Brands in the Field of Communications and Networking, we offer all the
+                    technical solutions for Low current Systems through a well-educated,
                     trained Engineers and Technicians.
                 </p>
             </div>
@@ -118,9 +136,12 @@
         <div class="container py-md-5 ">
             <div class="row inner_sec_info">
                 <div class="about-hny-info text-left pr-lg-5 ">
-                    <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span> Vision</h3>
+                    <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span>
+                        Vision</h3>
                     <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
-                        We will Seek by the help of god to prove existence through our business and allianes with national and international companies in order to achieve our goals and satisfy our customers and commitment to the highest performance and the lowest cost according
+                        We will Seek by the help of god to prove existence through our business and allianes with
+                        national and international companies in order to achieve our goals and satisfy our customers and
+                        commitment to the highest performance and the lowest cost according
                         to the schedule.
                     </p>
                 </div>
@@ -132,11 +153,12 @@
     <section class="about py-5">
         <div class="container py-md-5 ">
             <div class="about-hny-info text-left pr-lg-5 ">
-                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span> Mission</h3>
-                <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s" >
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span>
+                    Mission</h3>
+                <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                     We are not alone but nique, Perfection is our goal deeloping and training are our way.
-                     Offering customers our services and upgrading the level of technical and technology support to
-                      provid a high quality alternatives in a low budgest is what we aim for.
+                    Offering customers our services and upgrading the level of technical and technology support to
+                    provid a high quality alternatives in a low budgest is what we aim for.
                 </p>
             </div>
 
@@ -151,9 +173,9 @@
     <!-- footer -->
     <footer class="py-lg-5 py-4">
         <svg viewBox="-450 -450 900 50" class="Section-curve">
-                    <path fill="#fff" d='M-559,-477
-                    C-499,-388 571,-397 620,-501'/>
-                  </svg>
+            <path fill="#fff" d='M-559,-477
+                    C-499,-388 571,-397 620,-501' />
+        </svg>
         <div class="container py-sm-3">
             <div class="row footer-grids">
                 <div class="col-lg-4 mt-4 logo2">
@@ -161,7 +183,7 @@
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">
                             <img src="images/logo/Elite favicon.png" alt="">
-                            
+
                         </a>
                     </h2>
 
@@ -197,23 +219,24 @@
                             </li>
                             <li>
                                 <a href="about.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="About us">About us</span>
-                                                </a>
+                                    <span data-hover="About us">About us</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="index.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Services">Services</span>
-                                                </a>
+                                    <span data-hover="Services">Services</span>
+                                </a>
                             </li>
                             <li>
-                                <a href="projectDetials.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                    <span data-hover="Projects">Projects</span>
-                                                    </a>
+                                <a href="projectDetials.html"><span class="fa fa-angle-double-right"
+                                        aria-hidden="true"></span>
+                                    <span data-hover="Projects">Projects</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="contact.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Contact Us">Contact Us</span>
-                                                </a>
+                                    <span data-hover="Contact Us">Contact Us</span>
+                                </a>
                             </li>
 
                         </ul>
@@ -224,8 +247,10 @@
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a></p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a>
+                    </p>
+                    <p><span class="fa fa-envelope"></span><a
+                            href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
                 </div>
 
             </div>
