--- a/contact.html
+++ b/contact.html
@@ -34,48 +34,63 @@
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                                <h1>
-                                        <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
-                                            <img src="images/logo/Elite logo .png" alt="">
-                                            
-                                        </a>
-                                    </h1>
+                            <h1>
+                                <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
+                                    <img src="images/logo/Elite logo .png" alt="">
+
+                                </a>
+                            </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
                         <input type="checkbox" id="drop" />
                         <ul class="menu mr-auto">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li>
                                 <label for="drop-2" class="toggle toggle-2">services <span class="fa fa-angle-down"
-                                                aria-hidden="true"></span> </label>
+                                        aria-hidden="true"></span> </label>
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="System_Integrator.html" class="drop-text">System Integrator</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Networking & Security</a></li>
-                                    <li><a href="IT_Consultancy.html" class="drop-text">IT Consultancy Services </a></li>
-                                    <li><a href="Contact_Center.html" class="drop-text">Contact Center</a></li>
-                                    <li><a href="Training_Center.html" class="drop-text">Training Center</a></li>
-                                    <li><a href="vue.html" class="drop-text">VUE</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
+                                        </a></li>
+                                    <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
+                                    </li>
+                                    <li><a href="Training_Center.html" class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
-                            <li><a href="projectDetials.html">Projects</a></li>
-                            <li class="active"><a href="#">Contact</a></li>
+                            <li>
+                                <label for="drop-2" class="toggle toggle-2">Partner <span class="fa fa-angle-down"
+                                        aria-hidden="true"></span> </label>
+                                <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                <input type="checkbox" id="drop-2" />
+                                <ul>
+                                    <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
+                                </ul>
+                            </li>
+                            <li class="active"><a href="#">Contact Us</a></li>
+                            <li><a href="contact.html">Customer</a></li>
+                            <!-- <li><a href="contact.html">Career</a></li> -->
+                            <li><a href="contact.html">News</a></li>
 
-                            <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
-                                            class="fa fa-facebook-official" aria-hidden="true"></span>
-                                        <div class="tooltip">Facebook</div>
-                                    </a> </li>
+                            <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
+                                        class="fa fa-facebook-official" aria-hidden="true"></span>
+                                    <div class="tooltip">Facebook</div>
+                                </a> </li>
                             <li class="social-icons"><a href="#" class="p-0 social-icon"><span class="fa fa-twitter"
-                                            aria-hidden="true"></span>
-                                        <div class="tooltip">Twitter</div>
-                                    </a> </li>
+                                        aria-hidden="true"></span>
+                                    <div class="tooltip">Twitter</div>
+                                </a> </li>
                             <li class="social-icons"><a href="#" class="p-0 social-icon"><span class="fa fa-instagram"
-                                            aria-hidden="true"></span>
-                                        <div class="tooltip">Instagram</div>
-                                    </a> </li>
+                                        aria-hidden="true"></span>
+                                    <div class="tooltip">Instagram</div>
+                                </a> </li> -->
                         </ul>
                     </nav>
                     <!-- //nav -->
@@ -104,7 +119,8 @@
         <div class="content-w3ls-inn px-lg-5">
             <div class="container py-md-5 py-3">
                 <div class="px-lg-5">
-                    <h3 class="tittle-w3ls mb-lg-5 mb-4 wow fadeInLeft " data-wow-duration="1s "><span class="pink">Contact</span> Us</h3>
+                    <h3 class="tittle-w3ls mb-lg-5 mb-4 wow fadeInLeft " data-wow-duration="1s "><span
+                            class="pink">Contact</span> Us</h3>
 
 
                     <div class="contact-hny-form mt-lg-5 mt-3">
@@ -133,14 +149,16 @@
                                     </div>
                                 </div>
                                 <div class="form-group mx-auto mt-3 wow fadeInLeft " data-wow-duration="2s ">
-                                    <button type="submit" class="btn btn-default morebtn more black con-submit">Submit</button>
+                                    <button type="submit"
+                                        class="btn btn-default morebtn more black con-submit">Submit</button>
                                 </div>
                             </div>
 
                         </form>
                     </div>
                     <div class="map-w3pvt mt-5 wow fadeInLeft " data-wow-duration="2s ">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14300.388413872768!2d43.9539099!3d26.3557211!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x29681c933a4e3481!2z2KfZhNil2YTZg9iq2LHZiNmG2YrYp9iqINin2YTZhdiq2YXZitiy2Kkg2KfZhNin2YXZhtmK2KkgUFJFTUlVTQ!5e0!3m2!1sar!2seg!4v1556110886735!5m2!1sar!2seg"
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14300.388413872768!2d43.9539099!3d26.3557211!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x29681c933a4e3481!2z2KfZhNil2YTZg9iq2LHZiNmG2YrYp9iqINin2YTZhdiq2YXZitiy2Kkg2KfZhNin2YXZhtmK2KkgUFJFTUlVTQ!5e0!3m2!1sar!2seg!4v1556110886735!5m2!1sar!2seg"
                             width="600" height="615" frameborder="0" style="border:0" allowfullscreen></iframe>
 
                     </div>
@@ -155,9 +173,9 @@
     <!-- footer -->
     <footer class="py-lg-5 py-4">
         <svg viewBox="-450 -450 900 50" class="Section-curve">
-                    <path fill="#fff" d='M-559,-477
-                    C-499,-388 571,-397 620,-501'/>
-                  </svg>
+            <path fill="#fff" d='M-559,-477
+                    C-499,-388 571,-397 620,-501' />
+        </svg>
         <div class="container py-sm-3">
             <div class="row footer-grids">
                 <div class="col-lg-4 mt-4 logo2">
@@ -165,7 +183,7 @@
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">
                             <img src="images/logo/Elite favicon.png" alt="">
-                            
+
                         </a>
                     </h2>
 
@@ -201,23 +219,24 @@
                             </li>
                             <li>
                                 <a href="about.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="About us">About us</span>
-                                                </a>
+                                    <span data-hover="About us">About us</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="index.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Services">Services</span>
-                                                </a>
+                                    <span data-hover="Services">Services</span>
+                                </a>
                             </li>
                             <li>
-                                <a href="projectDetials.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                    <span data-hover="Projects">Projects</span>
-                                                    </a>
+                                <a href="projectDetials.html"><span class="fa fa-angle-double-right"
+                                        aria-hidden="true"></span>
+                                    <span data-hover="Projects">Projects</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="contact.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Contact Us">Contact Us</span>
-                                                </a>
+                                    <span data-hover="Contact Us">Contact Us</span>
+                                </a>
                             </li>
 
                         </ul>
@@ -228,8 +247,10 @@
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a></p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a>
+                    </p>
+                    <p><span class="fa fa-envelope"></span><a
+                            href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
                 </div>
 
             </div>
