--- a/error.html
+++ b/error.html
@@ -59,7 +59,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <input type="checkbox" id="drop" />
                         <ul class="menu mr-auto">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li>
                                 <!-- First Tier Drop Down -->
                                 <label for="drop-2" class="toggle toggle-2">Pages <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
@@ -76,7 +76,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 </ul>
                             </li>
                             <li><a href="index.html">Projects</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+<li><a href="contact.html">Customer</a></li>
+<li><a href="contact.html">Career</a></li>
+<li><a href="contact.html">News</a></li>
 
                             <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span class="fa fa-facebook-official" aria-hidden="true"></span>
                                     <div class="tooltip">Facebook</div>
