--- a/index.html
+++ b/index.html
@@ -43,25 +43,38 @@
                     <input type="checkbox" id="drop" />
                     <ul class="menu mr-auto">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li>
                             <label for="drop-2" class="toggle toggle-2">services <span class="fa fa-angle-down"
                                     aria-hidden="true"></span> </label>
                             <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
-                            <ul>
-                                <li><a href="System_Integrator.html" class="drop-text">System Integrator</a></li>
-                                <li><a href="Managed_Services.html" class="drop-text">Networking & Security</a></li>
-                                <li><a href="IT_Consultancy.html" class="drop-text">IT Consultancy Services </a></li>
-                                <li><a href="Contact_Center.html" class="drop-text">Contact Center</a></li>
-                                <li><a href="Training_Center.html" class="drop-text">Training Center</a></li>
-                                <li><a href="vue.html" class="drop-text">VUE</a></li>
+                              <ul>
+                                <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
+                                <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                <li><a href="IT_Consultancy.html" class="drop-text">	Project Management Consultancy </a></li>
+                                <li><a href="Contact_Center.html" class="drop-text">	Cyber Security Services</a></li>
+                                <li><a href="Training_Center.html" class="drop-text">	Mobile Apps </a></li>
+                                <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                             </ul>
                         </li>
-                        <li><a href="projectDetials.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li>
+                            <label for="drop-2"   class="toggle  toggle-2">Partner <span class="fa fa-angle-down"
+                                    aria-hidden="true"></span> </label>
+                            <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                            <input type="checkbox" id="drop-2" />
+                              <ul class="drop2">
+                                <li  ><a href="System_Integrator.html" class="drop-text">VMWare</a></li>
+                                <li  ><a href="Training_Center.html" class="drop-text">	Green Circle </a></li>
+                                <li   ><a href="vue.html" class="drop-text">ASCITT</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="contact.html">Customer</a></li>
+                        <!-- <li><a href="contact.html">Career</a></li> -->
+                        <li><a href="contact.html">News</a></li>
 
-                        <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
+                        <!--  <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                     class="fa fa-facebook-official" aria-hidden="true"></span>
                                 <div class="tooltip">Facebook</div>
                             </a> </li>
@@ -72,7 +85,7 @@
                         <li class="social-icons"><a href="#" class="p-0 social-icon"><span class="fa fa-instagram"
                                     aria-hidden="true"></span>
                                 <div class="tooltip">Instagram</div>
-                            </a> </li>
+                            </a> </li> --> 
                     </ul>
                 </nav>
                 <!-- //nav -->
@@ -120,8 +133,8 @@
                 </div>
             </div>
             <!-- banner-hny-info -->
-            <div   class="banner-hny-info wow fadeInUp" data-wow-duration="2s" >
-                <h3 > Company name is a National Saudi Company</h3>
+            <div class="banner-hny-info wow fadeInUp" data-wow-duration="2s">
+                <h3> Company name is a National Saudi Company</h3>
                 <div class="top-buttons mx-auto text-center mt-md-5 mt-3">
                     <a href="about.html" class="btn more mr-2">Read More</a>
                     <a href="contact.html" class="btn">Contact Us</a>
@@ -145,14 +158,16 @@
     <section class="about py-5">
         <div class="container p-md-5">
             <div class="about-hny-info text-left px-md-5">
-                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s" ><span class="pink">Who</span> we are</h3>
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"><span class="pink">Who</span> we are
+                </h3>
                 <p class="sub-tittle mt-3 mb-4 wow fadeInLeft " data-wow-duration="2s">
                     Company name is a National Saudi Company, Partners and Authorized Distributors for many of the
                     International Brands in the Field of Communications and Networking, we offer all the technical
                     solutions for Low current Systems through a well-educated, trained
                     Engineers and Technicians.
                 </p>
-                <a class="btn more black wow fadeInLeft" data-wow-duration="2s" href="about.html" role="button">Read More</a>
+                <a class="btn more black wow fadeInLeft" data-wow-duration="2s" href="about.html" role="button">Read
+                    More</a>
             </div>
         </div>
     </section>
@@ -160,7 +175,8 @@
     <!--services-->
     <section class="team banner_bottom py-5 " id="about">
         <div class="container ">
-            <h3 class="tittle-w3ls  mb-3 text-left wow fadeInLeft " data-wow-duration="1s"><span class="pink">What</span> We Provide</h3>
+            <h3 class="tittle-w3ls  mb-3 text-left wow fadeInLeft " data-wow-duration="1s"><span
+                    class="pink">What</span> We Provide</h3>
             <!-- <div class="row mt-lg-5 mt-4">
                 <div class="col-md-4 team-gd text-center">
                     <div class="team-img mb-4">
@@ -238,7 +254,7 @@
             </div> -->
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card wow fadeInLeft " data-wow-duration="3s" >
+                    <div class="card wow fadeInLeft " data-wow-duration="3s">
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner2.jpg" alt="">
@@ -255,7 +271,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card wow fadeInLeft " data-wow-duration="2s"  >
+                    <div class="card wow fadeInLeft " data-wow-duration="2s">
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner1.jpg" alt="">
@@ -272,7 +288,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card wow fadeInLeft " data-wow-duration="1s"  >
+                    <div class="card wow fadeInLeft " data-wow-duration="1s">
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/ab.jpg" alt="">
@@ -289,7 +305,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card wow fadeInLeft " data-wow-duration="3s"  >
+                    <div class="card wow fadeInLeft " data-wow-duration="3s">
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/ab.jpg" alt="">
@@ -306,7 +322,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card wow fadeInLeft " data-wow-duration="2s" >
+                    <div class="card wow fadeInLeft " data-wow-duration="2s">
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner2.jpg" alt="">
@@ -323,7 +339,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card wow fadeInLeft " data-wow-duration="1s"  >
+                    <div class="card wow fadeInLeft " data-wow-duration="1s">
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner3.jpg" alt="">
@@ -347,14 +363,14 @@
 
 
     <!--/mid-->
-    <section class="banner_bottom "     id="appointment">
+    <section class="banner_bottom " id="appointment">
         <div class="container py-md-5">
             <div class="row inner_sec_info">
 
 
                 <div class="col-lg-5 banner_bottom_left">
 
-                    <div class="login p-md-5 p-4 mx-auto bg-white mw-100   wow fadeInLeft " data-wow-duration="2s"    >
+                    <div class="login p-md-5 p-4 mx-auto bg-white mw-100   wow fadeInLeft " data-wow-duration="2s">
                         <h4>
                             Contact Us</h4>
                         <form action="#" method="post">
