--- a/projectDetials.html
+++ b/projectDetials.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
 
-   <link href="images/logo/Elite favicon.png" rel="icon">
-   
+    <link href="images/logo/Elite favicon.png" rel="icon">
+
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
@@ -35,49 +35,54 @@
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                                <h1>
-                                        <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
-                                            <img src="images/logo/Elite logo .png" alt="">
-                                            
-                                        </a>
-                                    </h1>
+                            <h1>
+                                <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
+                                    <img src="images/logo/Elite logo .png" alt="">
+
+                                </a>
+                            </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
                         <input type="checkbox" id="drop" />
                         <ul class="menu mr-auto">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li>
                                 <label for="drop-2" class="toggle toggle-2">services <span class="fa fa-angle-down"
-                                            aria-hidden="true"></span> </label>
+                                        aria-hidden="true"></span> </label>
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="System_Integrator.html" class="drop-text">System Integrator</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Networking & Security</a></li>
-                                    <li><a href="IT_Consultancy.html" class="drop-text">IT Consultancy Services </a></li>
-                                    <li><a href="Contact_Center.html" class="drop-text">Contact Center</a></li>
-                                    <li><a href="Training_Center.html" class="drop-text">Training Center</a></li>
-                                    <li><a href="vue.html" class="drop-text">VUE</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
+                                        </a></li>
+                                    <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
+                                    </li>
+                                    <li><a href="Training_Center.html" class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
 
                             <li class="active"><a href="contact.html">Projects</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="contact.html">Customer</a></li>
+                            <!-- <li><a href="contact.html">Career</a></li> -->
+                            <li><a href="contact.html">News</a></li>
 
-                            <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
-                                            class="fa fa-facebook-official" aria-hidden="true"></span>
-                                        <div class="tooltip">Facebook</div>
-                                    </a> </li>
+                            <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
+                                        class="fa fa-facebook-official" aria-hidden="true"></span>
+                                    <div class="tooltip">Facebook</div>
+                                </a> </li>
                             <li class="social-icons"><a href="#" class="p-0 social-icon"><span class="fa fa-twitter"
-                                            aria-hidden="true"></span>
-                                        <div class="tooltip">Twitter</div>
-                                    </a> </li>
+                                        aria-hidden="true"></span>
+                                    <div class="tooltip">Twitter</div>
+                                </a> </li>
                             <li class="social-icons"><a href="#" class="p-0 social-icon"><span class="fa fa-instagram"
-                                            aria-hidden="true"></span>
-                                        <div class="tooltip">Instagram</div>
-                                    </a> </li>
+                                        aria-hidden="true"></span>
+                                    <div class="tooltip">Instagram</div>
+                                </a> </li> -->
                         </ul>
                     </nav>
 
@@ -143,9 +148,13 @@
 
                     <!-- End WOWSlider.com BODY section -->
                     <h4 class="title-hny my-2">Lorem ipsum dolor sit amet</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod magna .Lorem ipsum dolor sit amet, consectetuer adipiscing elit,Sed diam nonummy nibh euismod magna .Integer pulvinar leo id viverra feugiat. Pellentesque
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod magna
+                        .Lorem ipsum dolor sit amet, consectetuer adipiscing elit,Sed diam nonummy nibh euismod magna
+                        .Integer pulvinar leo id viverra feugiat. Pellentesque
                         Libero Justo, Semper At Tempus Vel, Ultrices In Sed Ligula. Nulla Uter Sollicitudin Velit.</p>
-                    <p class="mt-2">Integer pulvinar leo id viverra feugiat. Pellentesque Libero Justo, Semper At Tempus Vel, Ultrices In Sed Ligula. Nulla Uter Sollicitudin Velit.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                    <p class="mt-2">Integer pulvinar leo id viverra feugiat. Pellentesque Libero Justo, Semper At Tempus
+                        Vel, Ultrices In Sed Ligula. Nulla Uter Sollicitudin Velit.Lorem ipsum dolor sit amet,
+                        consectetuer adipiscing elit, sed diam nonummy nibh euismod
                         magna.
                     </p>
 
@@ -163,9 +172,9 @@
     <!-- footer -->
     <footer class="py-lg-5 py-4">
         <svg viewBox="-450 -450 900 50" class="Section-curve">
-                    <path fill="#fff" d='M-559,-477
-                    C-499,-388 571,-397 620,-501'/>
-                  </svg>
+            <path fill="#fff" d='M-559,-477
+                    C-499,-388 571,-397 620,-501' />
+        </svg>
         <div class="container py-sm-3">
             <div class="row footer-grids">
                 <div class="col-lg-4 mt-4 logo2">
@@ -173,7 +182,7 @@
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">
                             <img src="images/logo/Elite favicon.png" alt="">
-                            
+
                         </a>
                     </h2>
 
@@ -209,23 +218,24 @@
                             </li>
                             <li>
                                 <a href="about.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="About us">About us</span>
-                                                </a>
+                                    <span data-hover="About us">About us</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="index.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Services">Services</span>
-                                                </a>
+                                    <span data-hover="Services">Services</span>
+                                </a>
                             </li>
                             <li>
-                                <a href="projectDetials.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                    <span data-hover="Projects">Projects</span>
-                                                    </a>
+                                <a href="projectDetials.html"><span class="fa fa-angle-double-right"
+                                        aria-hidden="true"></span>
+                                    <span data-hover="Projects">Projects</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="contact.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                                <span data-hover="Contact Us">Contact Us</span>
-                                                </a>
+                                    <span data-hover="Contact Us">Contact Us</span>
+                                </a>
                             </li>
 
                         </ul>
@@ -236,8 +246,10 @@
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a></p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a>
+                    </p>
+                    <p><span class="fa fa-envelope"></span><a
+                            href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
                 </div>
 
             </div>
