--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                             <span class="fa mx-2 fa-twitter"></span>
                         </a>
                         <a href="#" class="button-footr">
-                            <span class="fa mx-2 fa-dribbble"></span>
+                            <span class="fa mx-2 fa-instagram"></span>
                         </a>
                         <a href="#" class="button-footr">
                             <span class="fa mx-2 fa-pinterest"></span>
@@ -470,7 +470,7 @@
                             <li>
                                 <a href="projectDetials.html"><span class="fa fa-angle-double-right"
                                         aria-hidden="true"></span>
-                                    <span data-hover="Projects">Projects</span>
+                                    <span data-hover="Projects">Partner</span>
                                 </a>
                             </li>
                             <li>
@@ -487,10 +487,10 @@
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a>
+                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@elite.com.sa</a>
                     </p>
                     <p><span class="fa fa-envelope"></span><a
-                            href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
+                            href="mailto:y.sharaf@Premium.com.sa">y.shara@elite.com.sa</a></p>
                 </div>
 
             </div>
