--- a/vue.html
+++ b/vue.html
@@ -61,16 +61,16 @@
                                 </ul>
                             </li>
                             <li>
-                            <label for="drop-2" class="toggle toggle-2">Partner <span class="fa fa-angle-down"
-                                    aria-hidden="true"></span> </label>
-                            <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                            <input type="checkbox" id="drop-2" />
-                              <ul>
-                                <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
-                                <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
-                                <li><a href="IT_Consultancy.html" class="drop-text">	VMWare </a></li>
-                     </ul>
-                        </li>
+                                <label for="drop-2" class="toggle toggle-2">Partner <span class="fa fa-angle-down"
+                                        aria-hidden="true"></span> </label>
+                                <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                <input type="checkbox" id="drop-2" />
+                                <ul class="drop2">
+                                    <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
+                                </ul>
+                            </li>
                             <li><a href="contact.html">Contact Us</a></li>
                             <li><a href="contact.html">Customer</a></li>
                             <!-- <li><a href="contact.html">Career</a></li> -->
@@ -185,7 +185,7 @@
                             <span class="fa mx-2 fa-twitter"></span>
                         </a>
                         <a href="#" class="button-footr">
-                            <span class="fa mx-2 fa-dribbble"></span>
+                            <span class="fa mx-2 fa-instagram"></span>
                         </a>
                         <a href="#" class="button-footr">
                             <span class="fa mx-2 fa-pinterest"></span>
@@ -220,7 +220,7 @@
                             <li>
                                 <a href="projectDetials.html"><span class="fa fa-angle-double-right"
                                         aria-hidden="true"></span>
-                                    <span data-hover="Projects">Projects</span>
+                                    <span data-hover="Projects">Partner</span>
                                 </a>
                             </li>
                             <li>
@@ -237,10 +237,10 @@
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a>
+                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@elite.com.sa</a>
                     </p>
                     <p><span class="fa fa-envelope"></span><a
-                            href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
+                            href="mailto:y.sharaf@Premium.com.sa">y.shara@elite.com.sa</a></p>
                 </div>
 
             </div>
