--- a/error.html
+++ b/error.html
@@ -149,7 +149,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <span class="fa mx-2 fa-twitter"></span>
                         </a>
                         <a href="#" class="button-footr">
-                            <span class="fa mx-2 fa-dribbble"></span>
+                            <span class="fa mx-2 fa-instagram"></span>
                         </a>
                         <a href="#" class="button-footr">
                             <span class="fa mx-2 fa-pinterest"></span>
