--- a/Managed_Services.html
+++ b/Managed_Services.html
@@ -116,7 +116,10 @@
     <section class="about py-5">
         <div class="container py-md-5">
             <div class="about-hny-info text-left pr-lg-5">
-                <h3 class="tittle-w3ls mb-3">Networking & Security</h3>
+                <h3 class="tittle-w3ls mb-3">Networking & Security</h3> <br> <br>
+                <h5 class="mb-4">
+                    Power Management Systems :
+                </h5>
                 <p class="sub-tittle mt-3 mb-4 pr-lg-5">
                     With these capabilities, ELITEIT Network Services develops end-to-end solutions to help customers
                     move to an On Demand IT environment. Operational efficiency and business resiliency address these
